# ASA

./: .env.example  .gitignore  AGENTS.md  ARCH-SPEC-v0.2.md  CURRENT_STATE.md  MANAGER_INBOX.md  PM-SPEC-v0.2.md  POS-RS-v0.2.md  README.md  RES-001-v0.2.md  RES-002-v0.2.md  alembic.ini  compose.yaml  pyproject.toml  railpack.json
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: product-ci.yml  railway-deployment-observer.yml  validate-architecture.yml  validate-pos.yml
analytics/: __init__.py  atm_selection.py  clock.py  engine.py  errors.py  expiration_selection.py  features.py  forward_factor.py  registry.py
architecture/: ADR-001-observation-canonical-facts.md  ADR-002-provider-interface.md  ADR-003-opportunity-model.md  ADR-004-repository-organization.md  ADR-005-guardrail-model.md  ADR-006-indicator-versioning.md  ADR-007-ranking-model.md  ADR-008-operational-trading-contracts.md  ADR-009-execution-semantics.md  ARCHITECTURE_VISION.md  ASA-ARCH-003-Strategy-Composition.md  ASA-ARCH-004-Expression-Language.md  ASA-ARCH-005-Financial-Domain-Contracts.md  ASA-ARCH-006-Analytical-Execution-Contracts.md  ASA-ARCH-007-Market-Data-Platform.md  ASA-ARCH-MONOREPO-001-Packaging-Consolidation-ADR.md  CONSTITUTION.md  DECISION_LOG.md  DOMAIN_GLOSSARY.md  README.md
asa/: asgi.py  bootstrap.py  scheduled_screening.py
asa/api/: agent_auth.py  agent_models.py  models.py  screening_models.py  screening_routes.py
asa/application/: portfolio_use_cases.py  use_cases.py
asa/contracts/: market.py
asa/integrations/: __init__.py  observation_history_postgres.py  postgres.py  runs_postgres.py  screening_postgres.py  universal_screening_postgres.py
asa/market_data_ops/: auth.py  routes.py  service.py
backend/: alembic.ini  pyproject.toml  railway.json
backend/migrations/versions/: 0001_market_observations.py  0004_screening_state.py
backend/src/asa/: __init__.py  __main__.py  bootstrap.py  config.py  logging.py
backend/src/asa/api/: __init__.py  models.py  routes.py
backend/src/asa/application/: portfolio_use_cases.py  use_cases.py
backend/src/asa/application/ports/: brokers.py  repositories.py  runs.py
backend/src/asa/contracts/: portfolio.py
backend/src/asa/domain/: __init__.py  runs.py
backend/src/asa/integrations/: postgres.py  runs_postgres.py  screening_postgres.py
backend/src/asa/integrations/providers/: __init__.py  deterministic_fake_broker.py  robinhood.py
backend/src/asa/market_data_ops/: auth.py  routes.py  service.py  subjects.py  transport.py
backend/src/domain/: canonicalization.py  guardrail.py  indicator.py  observation.py  opportunity.py  references.py  values.py
backend/src/market_data/: alpha_vantage.py  budget.py  compliance.py  config.py  finnhub.py  fulfillment.py  snapshot.py  tradier.py  transport.py  validation.py
backend/tests/: __init__.py  fakes.py  test_boundaries.py  test_composition.py  test_config.py  test_logging.py  test_market_api.py  test_openapi_contract.py  test_portfolio_acceptance.py  test_portfolio_domain.py  test_postgres_acceptance.py  test_railway_runtime.py  test_runs.py  test_runs_postgres.py  test_screening_postgres.py
backend/tests/api/: test_agent_auth.py
backend/tests/market_data_ops/: fakes.py  test_market_data_validate.py  test_subjects.py  test_vendor_sync.py
docs/api/: agent-api-authentication.md  agent-api-bootstrap.md  agent-api-examples.md  agent-api-operations.md
docs/architecture/: ADR-001-foundation-stack.md  ADR-002-composition-root.md  ADR-003-published-portfolio.md  ADR-004-railway-robinhood-readonly.md
docs/deployment/: railway.md  (+2 more)
domain/: __init__.py  canonical_fact.py  execution.py  financial.py  guardrail.py  indicator.py  market_data.py  observation.py  operational.py  opportunity.py  outcome_metrics.py  provenance.py  provider.py  references.py  replay.py  simulation.py  values.py
execution_planning/: __init__.py  engine.py  errors.py  models.py
facts/: __init__.py  errors.py  repository.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
governance/: README.md  manifest.yaml
guardrails/: __init__.py  engine.py  errors.py  evaluations.py  registry.py
indicators/: __init__.py  calculations.py  engine.py  errors.py  registry.py  repository.py
market_data/: __init__.py  documentation.py  factory.py  finnhub.py  fixture.py  live_transport.py  providers.py  registry.py  replay.py  resolution.py
migrations/: env.py
observation/: __init__.py  canonicalization.py  errors.py  identity.py  repository.py
portfolio/: __init__.py  engine.py  errors.py  models.py  policies.py  registry.py
position_proposals/: __init__.py  engine.py  errors.py  models.py
presentation/: __init__.py
project/: BOOTSTRAP_STATUS.yaml  README.md
providers/: __init__.py
ranking/: __init__.py  engine.py  errors.py  models.py  registry.py  scorers.py
reconciliation/: __init__.py  engine.py  errors.py  rules.py
risk/: __init__.py  engine.py  errors.py  models.py
roles/: FOUNDER_INSTANTIATION_GUIDE.md  README.md
screening/: __init__.py  __main__.py  adapters.py  cli.py  clock.py  context_builders.py  errors.py  fixtures.py  live_acquisition.py  live_adapters.py  live_context.py  registry.py  results.py  runner.py  serialization.py  service.py  state.py
simulation/: __init__.py  engine.py  errors.py  lifecycle.py  models.py  replay.py
strategies/: __init__.py  calculations.py  component_registry.py  components.py  core_components.py  engine.py  errors.py  expressions.py  library.py  manifest.py  plugins.py  reference_strategy.py  registry.py  runtime.py  signal.py  stonk_components.py  stonk_manifests.py  stonk_plugins.py  type_system.py
strategy_runtime/: __init__.py  clock.py  context.py  contract.py  errors.py  execution.py  lifecycle.py  market_data_planning.py  options.py  persistence.py  registry.py  result.py  service.py  validation.py  values.py
tests/: instrument_helpers.py
tools/deployment_observer/: __init__.py  collect.py  observer.py  publish.py  pyproject.toml
(+409 files in other folders)
