[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "asa"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "robin-stocks==3.4.0",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
  "testcontainers[postgres]>=4.9,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["asa"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["asa"]
plugins = ["pydantic.mypy"]

# strategies/ and indicators/ carry 22 pre-existing mypy findings (tracked as
# issue #147, unrelated to and predating this consolidation). asa/ imports
# screening/, which transitively imports these -- follow_imports = "skip"
# resolves the imports (no "module not found") without type-checking their
# contents, narrower than ignoring the whole packages, and fixes nothing in
# them, matching this ticket's own exclusions.
[[tool.mypy.overrides]]
module = ["strategies.*", "indicators.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "postgres: requires a PostgreSQL server",
  "live_provider: opt-in bounded provider validation requiring configured credentials",
]
