[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "asa-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "robin-stocks==3.4.0",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
  "testcontainers[postgres]>=4.9,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asa"]

[tool.ruff]
line-length = 100
target-version = "py312"
# src/market_data and src/domain are byte-identical vendor copies of the repository-root
# packages (see tests/market_data_ops/test_vendor_sync.py); they are linted under the
# root project's own ruff configuration, not duplicated here.
extend-exclude = ["src/market_data", "src/domain"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["asa"]
# src resolves asa/ and its vendored market_data/domain copies, unchanged.
# ".." (the repository root) additionally resolves screening/, analytics/,
# strategies/ -- the shared execution-graph modules asa now imports
# directly (API-001, SPRINT-008). src is listed first so asa's own existing
# imports keep resolving exactly as before; screening/'s own imports of
# market_data/domain are guaranteed equivalent either way by
# tests/market_data_ops/test_vendor_sync.py.
mypy_path = "src:.."
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = ["postgres: requires a PostgreSQL server"]
# Same rationale and ordering as mypy_path above.
pythonpath = ["src", ".."]
