[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "asa-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "robin-stocks==3.4.0",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
  "testcontainers[postgres]>=4.9,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asa"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["asa"]
# src resolves asa/, unchanged. ".." (the repository root) resolves
# screening/, analytics/, strategies/, market_data/, domain/ -- the shared
# execution-graph modules asa imports directly (API-001, SPRINT-008;
# ARCH-MONOREPO-001 Phase 2A retired the vendored market_data/domain copies
# asa previously required, so it now imports the root packages the same
# way screening/ always has).
mypy_path = "src:.."
plugins = ["pydantic.mypy"]

# strategies/ and indicators/ carry 22 pre-existing mypy findings (tracked
# as issue #147 in the root project, unrelated to and predating this
# sprint) that were never previously reachable by backend's own mypy run
# (mypy_path was just "src"). Extending mypy_path to reach screening/'s own
# imports transitively surfaces them here too -- product-ci.yml's backend
# job hard-fails on any mypy error, so they must be silenced for THIS run
# without masking new errors in files this sprint actually touches.
# follow_imports = "skip" makes these modules resolve (no "module not
# found" for screening/'s own imports of them) without type-checking their
# contents -- narrower than ignoring the whole strategies/indicators
# packages, and fixes nothing in them, matching this ticket's own
# exclusions.
[[tool.mypy.overrides]]
module = ["strategies.*", "indicators.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = ["postgres: requires a PostgreSQL server"]
# Same rationale and ordering as mypy_path above.
pythonpath = ["src", ".."]
