[project]
name = "asa-deployment-observer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pyyaml>=6.0,<7",
  "ruff>=0.12,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["../../tests/deployment_observer"]
markers = [
  "live_provider: opt-in bounded provider validation requiring configured credentials",
]
